# serializer version: 1
# name: test_ech0206_client[2759626.1504406286-1191908.3321774867]
  dict({
    'data': dict({
      'folgeplanung': dict({
        'hidden': False,
        'label': None,
        'value': 'Quartierplan Roter Turm (hinweisend)',
      }),
      'gebaeude-und-anlagen': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-242B',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '400017774',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7520',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7520',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7500',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7500',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'nein',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7430',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7430',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7600',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7600',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7520',
            }),
            'weitere-energie-waermequelle-warmwasser': dict({
              'label': None,
              'value': '7500',
            }),
            'weitere-waermeerzeuger-warmwasser': dict({
              'label': None,
              'value': '7600',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
        ]),
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Parkierung Gebiete A',
      }),
      'parzelle': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH916878867738',
            }),
            'parzellennummer': dict({
              'label': None,
              'value': '129',
            }),
          }),
          dict({
            'baurecht-nummer': dict({
              'label': None,
              'value': '9962',
            }),
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH438677685533',
            }),
          }),
          dict({
            'baurecht-nummer': dict({
              'label': None,
              'value': '9066',
            }),
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH616845867749',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Wohnzone 4, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_ech0206_client[2759647.4234941704-1191526.8007143869]
  dict({
    'data': dict({
      'gebaeude-und-anlagen': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-116',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '1738776',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7501',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7501',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7501',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7501',
            }),
            'energiebezugsflaeche': dict({
              'label': None,
              'value': '226',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'ja',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7410',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7410',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7610',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7610',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7501',
            }),
            'weitere-energie-waermequelle-warmwasser': dict({
              'label': None,
              'value': '7500',
            }),
            'weitere-waermeerzeuger-heizung': dict({
              'label': None,
              'value': '7400',
            }),
            'weitere-waermeerzeuger-warmwasser': dict({
              'label': None,
              'value': '7600',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-117',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '1738778',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7530',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7530',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7530',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7530',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'ja',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7430',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7430',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7630',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7630',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7530',
            }),
            'weitere-energie-waermequelle-warmwasser': dict({
              'label': None,
              'value': '7500',
            }),
            'weitere-waermeerzeuger-warmwasser': dict({
              'label': None,
              'value': '7600',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-115B',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '1738793',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7530',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7530',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7530',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7530',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'ja',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7430',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7430',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7630',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7630',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7530',
            }),
            'weitere-energie-waermequelle-warmwasser': dict({
              'label': None,
              'value': '7500',
            }),
            'weitere-waermeerzeuger-warmwasser': dict({
              'label': None,
              'value': '7600',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
        ]),
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Parkierung Gebiete A',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Erhaltungsbereiche Gebiete mit besonderer Wohnqualität',
      }),
      'parzelle': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH287786687730',
            }),
            'parzellennummer': dict({
              'label': None,
              'value': '54',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Wohnzone 3, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_ech0206_client[2759652.9068137-1191423.1268269215]
  dict({
    'data': dict({
      'folgeplanung': dict({
        'hidden': False,
        'label': None,
        'value': 'Baulinie allgemein',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Fuss- / Spazierweg, Parkierung Gebiete A',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Erhaltungsbereiche Gebiete mit besonderer Wohnqualität',
      }),
      'parzelle': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH438677680484',
            }),
            'parzellennummer': dict({
              'label': None,
              'value': '5084',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Wohnzone 3, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_ech0206_client[2759664.9038492967-1191395.5015286694]
  dict({
    'data': dict({
      'folgeplanung': dict({
        'hidden': False,
        'label': None,
        'value': 'Baulinie allgemein',
      }),
      'gebaeude-und-anlagen': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-47',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '1738808',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7520',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7520',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7520',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7520',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'ja',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7430',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7430',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7630',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7630',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7520',
            }),
            'weitere-energie-waermequelle-warmwasser': dict({
              'label': None,
              'value': '7500',
            }),
            'weitere-waermeerzeuger-warmwasser': dict({
              'label': None,
              'value': '7600',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-46',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '1738809',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7520',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7520',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7520',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7520',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'ja',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7430',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7430',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7630',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7630',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7520',
            }),
            'weitere-energie-waermequelle-warmwasser': dict({
              'label': None,
              'value': '7500',
            }),
            'weitere-waermeerzeuger-warmwasser': dict({
              'label': None,
              'value': '7600',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
        ]),
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Parkierung Gebiete A',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Bauten und Anlagen erhaltenswert, Erhaltungsbereiche Gebiete mit besonderer Wohnqualität',
      }),
      'parzelle': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH127777866804',
            }),
            'parzellennummer': dict({
              'label': None,
              'value': '42',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Wohnzone 3, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_ech0206_client[2759746.044642407-1191415.6188414234]
  dict({
    'data': dict({
      'folgeplanung': dict({
        'hidden': False,
        'label': None,
        'value': 'Baulinie allgemein',
      }),
      'gebaeude-und-anlagen': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-50',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '9001212',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7520',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7520',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7530',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7530',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'ja',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7430',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7430',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7630',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7630',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7520',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
        ]),
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Parkierung Gebiete A',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Erhaltungsbereiche Gebiete mit besonderer Wohnqualität',
      }),
      'parzelle': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH159786776840',
            }),
            'parzellennummer': dict({
              'label': None,
              'value': '3309',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Wohnzone 3, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_ech0206_client[2759772.4989033034-1191611.9958049427]
  dict({
    'data': dict({
      'gebaeude-und-anlagen': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': 'NN',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '191714455',
            }),
            'energie-waermequelle-heizung': dict({
              'displayValue': '7598',
              'label': 'energie-waermequelle-heizung',
              'value': 'energie-waermequelle-heizung-7598',
            }),
            'energie-waermequelle-warmwasser': dict({
              'displayValue': '7598',
              'label': 'energie-waermequelle-warmwasser',
              'value': 'energie-waermequelle-warmwasser-7598',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'ja',
            }),
            'waermeerzeuger-heizung': dict({
              'displayValue': '7410',
              'label': 'waermeerzeuger-heizung',
              'value': 'waermeerzeuger-heizung-7410',
            }),
            'waermeerzeuger-warmwasser': dict({
              'displayValue': '7610',
              'label': 'waermeerzeuger-warmwasser',
              'value': 'waermeerzeuger-warmwasser-7610',
            }),
            'weitere-energie-waermequelle-heizung': dict({
              'label': None,
              'value': '7598',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'ja',
            }),
          }),
        ]),
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Parkierung Gebiete A',
      }),
      'parzelle': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH238677687779',
            }),
            'parzellennummer': dict({
              'label': None,
              'value': '60',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Zone für öffentliche Bauten und Anlagen, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_ech0206_client[2760073.7106244904-1191456.8678512666]
  dict({
    'data': dict({
      'gebaeude-und-anlagen': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'amtliche-gebaeudenummer': dict({
              'label': None,
              'value': '4-328A',
            }),
            'egid-nr': dict({
              'label': 'egid-nr',
              'value': '9001126',
            }),
            'ist-ein-warmwasseranschluss-geplant': dict({
              'label': None,
              'value': 'nein',
            }),
            'werden-flaechen-beheizt': dict({
              'label': None,
              'value': 'nein',
            }),
          }),
        ]),
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Parkierung Gebiete A',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Erhaltungsbereiche Gebiete mit besonderer Wohnqualität',
      }),
      'parzelle': dict({
        'hidden': False,
        'label': None,
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH807768798612',
            }),
            'parzellennummer': dict({
              'label': None,
              'value': '251',
            }),
          }),
          dict({
            'baurecht-nummer': dict({
              'label': None,
              'value': '14463',
            }),
            'e-grid-nr': dict({
              'label': None,
              'value': 'CH296077959995',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': None,
        'value': 'Wohnzone 2, Keine Gefahrenzone',
      }),
    }),
  })
# ---
